<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Sample Application</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="no_bridge">No Bridge found.Start Bridge Search</string>
    <string name="menu_find_bridge">Find New Bridge</string>
    <string name="menu_create_group">Create Group</string>
    <string name="menu_create_timer">Create Schedule</string>
    <string name="menu_create_scene">Create Scene</string>
    <string name="txt_on_off">On-Off</string>
    <string name="txt_hue">Hue</string>
    <string name="txt_sat">Sat</string>
    <string name="txt_bri">Bri</string>
    <string name="txt_x">X</string>
    <string name="txt_y">Y</string>
    <string name="txt_gamut_correction">Gamut Correction</string>
    <string name="txt_effect">Effect</string>
    <string name="txt_none">none</string>
    <string name="txt_colorloop">colorloop</string>
    <string name="txt_alert">Alert</string>
    <string name="txt_select">select</string>
    <string name="txt_lselect">lselect</string>
    <string name="txt_t_time">T. time</string>
    <string name="txt_no_groups">No groups found.</string>
    <string name="txt_no_lights_found">No lights found.</string>
    <string name="txt_no_timers">No Schedules found.</string>
    <string name="txt_choose_group">Select a group</string>
    <string name="txt_choose_light">Select a Lamp</string>
    <string name="txt_group_name">Group Name</string>
    <string name="txt_choose_schedule">Select a Schedule</string>
    <string name="txt_no_lights_for_group">Please select minimum 2 lights for group</string>
    <string name="txt_group_created">Group created successfully</string>
    <string name="txt_empty_input">Invalid input</string>
    <string name="txt_group_deleted">Group deleted successfully</string>
    <string name="txt_bridge_features">Bridge</string>
    <string name="txt_light_features">Light</string>
    <string name="txt_group_features">Group</string>
    <string name="txt_light_list">Get Lights</string>
    <string name="txt_group_list">Get Groups</string>
    <string name="txt_light_rename">Rename Light</string>
    <string name="txt_group_rename">Rename Group</string>
    <string name="txt_light_state">Update Light State</string>
    <string name="txt_group_light_state">Set Light State For Group</string>
    <string name="txt_group_create">Create Group</string>
    <string name="txt_group_delete">Delete Group</string>
    <string name="txt_sdk_version">SDK Version </string>
    <string name="txt_sw">Software Update</string>
    <string name="txt_sw_updating">Please Wait..</string>
    <string name="txt_softwareupdate_available">Software Update Available</string>
    <string name="txt_softwareupdate_dialog">Do you want to update now?</string>
    <string name="txt_sw_not_available">SoftwareUpdate Successfully updated</string>
    <string name="txt_sw_success">SoftwareUpdate Not Available</string>
    <string name="txt_sw_check">Check for Software Update</string>
    <string name="txt_schedule_features">Schedule</string>
    <string name="txt_non_recurring_schedule_features">Non Recurring Schedule</string>
    <string name="txt_non_recurring_schedule_create">Create Non Recurring Schedule</string>
    <string name="txt_non_recurring_schedule_update">Update Non Recurring Schedule</string>
    <string name="txt_non_recurring_schedule_remove">Remove Non Recurring Schedule</string>
    <string name="txt_recurring_schedule_features">Recurring Schedule</string>
    <string name="txt_recurring_schedule_create">Create Recurring Schedule</string>
    <string name="txt_recurring_schedule_update">Update Recurring Schedule</string>
    <string name="txt_recurring_schedule_remove">Remove Recurring Schedule</string>
    <string name="txt_timer_features">Timer</string>
    <string name="txt_timer_create">Create Timer</string>
    <string name="txt_timer_remove">Remove Timer</string>
    <string name="txt_timer_update">Update Timer</string>
    <string name="txt_recurring_timer_features">Recurring Timer</string>
    <string name="txt_recurring_timer_create">Create Recurring Timer</string>
    <string name="txt_recurring_timer_update">Update Recurring Timer</string>
    <string name="txt_recurring_timer_remove">Remove Recurring Timer</string>
    <string name="txt_timer_name">Name</string>
    <string name="txt_schedule_time">At Time</string>
    <string name="txt_timer_time">After Time</string>
    <string name="txt_timer_light">Select Light</string>
    <string name="txt_timer_group">Select Group</string>
    <string name="txt_timer_lightState">Light State</string>
    <string name="txt_timer_description">Description</string>
    <string name="btn_timer_time">Choose Time</string>
    <string name="btn_timer_lightState">Set Light State</string>
    <string name="txt_empty_timer_name">Please enter Schedule name.</string>
    <string name="txt_empty_time">Please select time for Schedule.</string>
    <string name="txt_empty_time_recurring_schedule">Please select time and recurring days for Schedule.</string>
    <string name="txt_empty_recurring_timer_interval">Please enter No. Of recurrence for Recurring Timer.</string>
    <string name="txt_empty_light_group">Please select light or group for Schedule.</string>
    <string name="txt_empty_light_state">Please set light state.</string>
    <string name="txt_timer_created">Schedule created successfully</string>
    <string name="txt_timer_deleted">Schedule removed successfully</string>
    <string name="txt_timer_updated">Schedule updated successfully</string>
    <string name="txt_no_lights_found_for_timer">No lights found to create Schedule.</string>
    <string name="txt_no_lights_found_for_group">Minimum 2 light required to create Group.</string>
    <string name="txt_no_lights_found_for_scene">No lights found to create Scene.</string>
    <string name="txt_timer_light_state_update">Update Schedule Light State</string>
    <string name="txt_button_ok">OK</string>
    <string name="txt_button_cancel">Cancel</string>
    <string name="txt_pleasewait">Please Wait..</string>
    <string name="txt_scene_id">Scene Identifier</string>
    <string name="txt_scene_name">Scene Name</string>
    <string name="txt_no_lights_for_scene">Please select atleast one Light</string>
    <string name="txt_scene_created">Scene created successfully</string>
    <string name="txt_no_scene">No Scene found.</string>
    <string name="txt_create_scene">Create Scene</string>
    <string name="txt_activate_scene">Activate Scene</string>
    <string name="txt_scene_features">Synchronous Scenes</string>
    <string name="txt_scene_activated">Scene activated successfully</string>
    <string name="txt_scene_show">Get Scenes</string>
    <string name="txt_schedule_days">Days</string>
    <string name="txt_button_sun">S</string>
    <string name="txt_button_mon">M</string>
    <string name="txt_button_tue">T</string>
    <string name="txt_button_wed">W</string>
    <string name="txt_button_thu">T</string>
    <string name="txt_button_fri">F</string>
    <string name="txt_button_sat">S</string>
    <string name="txt_schedule_randomize">Randomize</string>
    <string name="txt_schedule_randomize_sec">sec</string>
    <string name="txt_schedule_recurring_interval">No. of recurrences</string>
    <string name="txt_schedule_recurring_interval_hint"> Enter value in range 00..99. </string>
    <string name="txt_divider_content_description">Divider</string>
    <string name="txt_checkbox_logging">Logging</string>
    <string name="txt_last_heartbeat">Last Heartbeat : </string>
    <string name="txt_button_read_cache">Read Cache</string>
    <string name="txt_sw_update_not_available">Sofware update not available</string>
    <string name="txt_sw_update_downloading">Sofware update being downloading...</string>
    <string name="txt_sw_update_success">"Software update is success"</string>
    <string name="txt_serial_not_valid">The serial number must have 6 characters.</string>
</resources>
