<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvSelectTimer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_weight="20"
        android:text="@string/txt_choose_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/timerSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSelectTimer"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/timerSpinner"
        android:fillViewport="true"
        android:overScrollMode="never" >

        <TableLayout
            android:id="@+id/TableLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:stretchColumns="1"
            android:weightSum="110" >

            <TableRow
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_weight="10"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/tvTimerName"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="42"
                    android:gravity="center_vertical"
                    android:text="@string/txt_timer_name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTvTimerName"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_weight="58"
                    android:background="@drawable/editborder"
                    android:gravity="center_vertical"
                    android:lines="2" />
            </TableRow>

            <TableRow
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_weight="10"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/tvTimerDescription"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="42"
                    android:gravity="center_vertical"
                    android:text="@string/txt_timer_description"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTvTimerDescriptor"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_weight="58"
                    android:background="@drawable/editborder"
                    android:gravity="left|top"
                    android:lines="5" />
            </TableRow>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txt_divider_content_description"
                android:paddingBottom="5sp"
                android:paddingLeft="2sp"
                android:paddingRight="2sp"
                android:scaleType="fitXY"
                android:src="@drawable/divideline" />

            <TableRow
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_weight="10"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/tvTimerTime"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="42"
                    android:gravity="center_vertical"
                    android:text="@string/txt_timer_time"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="58"
                    android:fitsSystemWindows="false"
                    android:gravity="left|top"
                    android:padding="0px" >

                    <Button
                        android:id="@+id/btnTimerTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:gravity="center"
                        android:text="@string/btn_timer_time"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRowRandomTime"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="10"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/tvTimerRandomTime"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="42"
                    android:gravity="center_vertical"
                    android:text="@string/txt_schedule_randomize"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_weight="58"
                    android:gravity="center_vertical" >

                    <EditText
                        android:id="@+id/editTvTimerRandomTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="40"
                        android:background="@drawable/editborder"
                        android:gravity="center_vertical"
                        android:lines="2"
                        android:numeric="integer" />

                    <TextView
                        android:id="@+id/tvTimerRandomTimeHintMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:text="@string/txt_schedule_randomize_sec"
                        android:textSize="15sp" />
                </LinearLayout>
            </TableRow>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txt_divider_content_description"
                android:paddingBottom="5sp"
                android:paddingLeft="2sp"
                android:paddingRight="2sp"
                android:scaleType="fitXY"
                android:src="@drawable/divideline" />

            <TableRow
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_weight="10"
                android:gravity="center_vertical" >

                <RadioButton
                    android:id="@+id/rbLightForTimer"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/txt_timer_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_weight="10" >

                <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="42" />

                <Spinner
                    android:id="@+id/lightSpinnerForTimer"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginRight="15dp"
                    android:layout_weight="58" />
            </TableRow>

            <TableRow
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_weight="10"
                android:gravity="center_vertical" >

                <RadioButton
                    android:id="@+id/rbGroupForTimer"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/txt_timer_group"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_weight="10" >

                <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="42" />

                <Spinner
                    android:id="@+id/groupSpinnerForTimer"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginRight="15dp"
                    android:layout_weight="58" />
            </TableRow>

            <TableRow
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_weight="10"
                android:gravity="left" >

                <TextView
                    android:id="@+id/tvTimerLightState"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="42"
                    android:text="@string/txt_timer_lightState"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="58"
                    android:fitsSystemWindows="false"
                    android:padding="0px" >

                    <Button
                        android:id="@+id/btnTimerLightState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/btn_timer_lightState"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>